New beta not yet available, so pushing both versions
Changed approach to Snyk test to use docker build

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,10 +9,9 @@ jobs:
       uses: actions/docker/cli@master
       with:
         args: run -i hadolint/hadolint hadolint - < Dockerfile
-    - name: snyk-test
-      uses: docker://snyk/snyk-cli:python-3
+    - name: security
+      uses: actions/docker/cli@master
       env:
-        ENV_FLAGS: --org=${{ secrets.SNYK_ORK }}
-        PROJECT_FOLDER: /github/workspace
-        PROJECT_PATH: /github/workspace
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      with:
+        args: build --build-arg SNYK_TOKEN --target Security .
