--- a/Pipfile
+++ b/Pipfile
@@ -1,6 +1,6 @@
 [[source]]
 url = "https://pypi.org/simple"
-verify_ssl = true
+verify_ssl = false
 name = "pypi"
 
 [packages]
@@ -8,6 +8,9 @@ flask = "==0.12.0"
 gunicorn = "*"
 
 [dev-packages]
+pytest-flask = "*"
+pytest-black = "*"
+pytest-isort = "*"
 
 [requires]
 python_version = "3.7"
