--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,11 +15,9 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: build
-      uses: actions/docker/cli@master
       env:
         DOCKER_BUILDKIT: 1
-      with:
-        args: build -t sample .
+      run: docker build -t sample .
     - name: Run Snyk to check Docker image for vulnerabilities
       uses: snyk/actions/docker@master
       env:
