Give the new action a better name

--- a/.github/workflows/gatekeeper.yml
+++ b/.github/workflows/gatekeeper.yml
@@ -1,7 +1,7 @@
 on: push
 name: Build
 jobs:
-  security:
+  gatekeeper:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
