--- a/.github/workflows/gatekeeper.yml
+++ b/.github/workflows/gatekeeper.yml
@@ -1,7 +1,7 @@
 on: push
-name: Build
+name: Gatekeeper
 jobs:
-  gatekeeper:
+  build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
