--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -1,7 +1,7 @@
 on: push
-name: Testing
+name: Snyk
 jobs:
-  security:
+  application:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
