--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            pipenv instal
+            pipenv install --dev
       - save_cache:
           paths:
             - .venv
