--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
             pipenv run pytest
   policy:
     docker:
-      - image: circleci/buildpack-deps:latest
+      - image: circleci/buildpack-deps:stretch
     steps:
       - checkout
       - conftest/install
@@ -37,3 +37,9 @@ jobs:
           name: Test Pipfile
           command: conftest --input toml --namespace pipfile Pipfile
 
+workflows:
+  version: 2
+  build:
+    jobs:
+      - python
+      - policy
