--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: build
+    - name: Build image
       env:
         DOCKER_BUILDKIT: 1
       run: docker build --pull -t snyky .
