--- a/.github/workflows/policy.yml
+++ b/.github/workflows/policy.yml
@@ -10,3 +10,14 @@ jobs:
       with:
         files: pytest.ini
         namespace: pytest
+    - name: Test Dockerfile
+      uses: instrumenta/conftest-action@master
+      with:
+        files: Dockerfile
+        namespace: docker
+    - name: Test Pipfile
+      uses: instrumenta/conftest-action@master
+      with:
+        files: Pipfile
+        input: toml
+        namespace: pipfile
