--- a/snyky.yaml
+++ b/snyky.yaml
@@ -3,11 +3,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: release-name-snyky
+  name: snyky
   labels:
     app.kubernetes.io/name: snyky
     helm.sh/chart: snyky-0.1.0
-    app.kubernetes.io/instance: release-name
+    app.kubernetes.io/instance: snyky
     app.kubernetes.io/version: "1.0"
     app.kubernetes.io/managed-by: Tiller
 spec:
@@ -19,7 +19,7 @@ spec:
       name: http
   selector:
     app.kubernetes.io/name: snyky
-    app.kubernetes.io/instance: release-name
+    app.kubernetes.io/instance: snyky
 
 ---
 # Source: snyky/templates/deployment.yaml
@@ -30,7 +30,7 @@ metadata:
   labels:
     app.kubernetes.io/name: snyky
     helm.sh/chart: snyky-0.1.0
-    app.kubernetes.io/instance: release-name
+    app.kubernetes.io/instance: snyky
     app.kubernetes.io/version: "1.0"
     app.kubernetes.io/managed-by: Tiller
 spec:
@@ -38,12 +38,12 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/name: snyky
-      app.kubernetes.io/instance: release-name
+      app.kubernetes.io/instance: snyky
   template:
     metadata:
       labels:
         app.kubernetes.io/name: snyky
-        app.kubernetes.io/instance: release-name
+        app.kubernetes.io/instance: snyky
     spec:
       containers:
         - name: snyky
