--- a/gatekeeper/Makefile
+++ b/gatekeeper/Makefile
@@ -2,16 +2,14 @@
 KUBECTL = kubectl
 APPLY = $(KUBECTL) apply -f
 
-init: exclude
+init:
 	@$(APPLY) $(CURDIR)/sync.yaml
 	@$(APPLY) $(CURDIR)/SecurityControls.yaml
-	@$(APPLY) $(CURDIR)/constraint.yaml
-
-exclude:
-	$(KUBECTL) label --overwrite namespace/kube-system control-plane=1
+	@$(APPLY) $(CURDIR)/enforce.yaml
+	@$(APPLY) $(CURDIR)/audit.yaml
 
 show:
 	@$(KUBECTL) get SecurityControls deployment-and-pod-security-controls -o yaml
 
 
-.PHONY: init exclude show
+.PHONY: init show
