--- a/snyky.yaml
+++ b/snyky.yaml
@@ -1,4 +1,27 @@
 ---
+# Source: snyky/templates/service.yaml
+apiVersion: v1
+kind: Service
+metadata:
+  name: snyky
+  labels:
+    app.kubernetes.io/name: snyky
+    helm.sh/chart: snyky-0.1.0
+    app.kubernetes.io/instance: snyky
+    app.kubernetes.io/version: "1.0"
+    app.kubernetes.io/managed-by: Helm
+spec:
+  type: ClusterIP
+  ports:
+    - port: 8080
+      targetPort: http
+      protocol: TCP
+      name: http
+  selector:
+    app.kubernetes.io/name: snyky
+    app.kubernetes.io/instance: snyky
+---
+# Source: snyky/templates/deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -8,7 +31,7 @@ metadata:
     helm.sh/chart: snyky-0.1.0
     app.kubernetes.io/instance: snyky
     app.kubernetes.io/version: "1.0"
-    app.kubernetes.io/managed-by: Tiller
+    app.kubernetes.io/managed-by: Helm
 spec:
   replicas: 1
   selector:
@@ -23,10 +46,8 @@ spec:
     spec:
       containers:
         - name: snyky
-          image: "garethr/snyky:latest"
+          image: "garethr/snyky:slim"
           imagePullPolicy: IfNotPresent
-          securityContext:
-            privileged: true
           ports:
             - name: http
               containerPort: 5000
@@ -41,24 +62,3 @@ spec:
               port: http
           resources:
             {}
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: snyky
-  labels:
-    app.kubernetes.io/name: snyky
-    helm.sh/chart: snyky-0.1.0
-    app.kubernetes.io/instance: snyky
-    app.kubernetes.io/version: "1.0"
-    app.kubernetes.io/managed-by: Tiller
-spec:
-  type: ClusterIP
-  ports:
-    - port: 8080
-      targetPort: http
-      protocol: TCP
-      name: http
-  selector:
-    app.kubernetes.io/name: snyky
-    app.kubernetes.io/instance: snyky
